# data-engineering-workbook

./: README.md
astro-airflow-101/.astro/: config.yaml
astro-airflow-101/dags/: check_file.py  delay_dag.py  first_dag.py  my_taskflow_dag.py  my_traditional_dag.py  wait_dag.py
astro-airflow-quickstart/: Dockerfile  requirements.txt
astro-airflow-quickstart/.astro/: config.yaml
astro-airflow-quickstart/dags/: find_the_iss.py  my_astronaut_dag.py
astro-managed-airflow/.astro/: config.yaml
astro-quick-start/.astro/: config.yaml
astro-quickstart/.astro/: config.yaml
astro-quickstart/dags/: exampledag.py
aws-managed-airflow/: Dockerfile  docker-compose.yaml
openmeteo-elt/: .gitignore  Dockerfile  Makefile  docker-compose.yml  extract.py  init_db.sql  pyproject.toml  ruff.toml
openmeteo-elt/config/: airflow.cfg
openmeteo-elt/dags/: dbt_dag.py  hello_world_taskflow.py  weather_dag.py
openmeteo-elt/dbt/: .user.yml  dbt_project.yml  profiles.yml
openmeteo-elt/dbt/models/: avg_temperature_per_city.sql  schema.yml  sources.yml
openmeteo-elt/include/: weather_utils.py
openmeteo-elt/tests/dags/: test_weather_dag.py
pokeapi-mongo-s3-airflow-etl/: main.py  requirements.txt
pyspark-tutorial/: .gitignore  README.md  parallelize.md
pyspark-tutorial/notes/: rdd.md  (+5 more)
pyspark-udemy-course/: Dockerfile  clustering.ipynb  dataframe_exercises.ipynb  dataframe_practice.ipynb  docker-compose.yaml  linear_regression.ipynb  logistic_regression.ipynb  nlp.ipynb  playground.ipynb  recommender_system.ipynb  tree_alg.ipynb
try-dbt/: .gitignore  docker-compose.yml
(+21 files in other folders)
